--- a/polygonUM.vcxproj
+++ b/polygonUM.vcxproj
@@ -141,6 +141,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="include\polygon.cpp" />
     <ClCompile Include="lib\imgui\imgui.cpp" />
     <ClCompile Include="lib\imgui\imgui_demo.cpp" />
     <ClCompile Include="lib\imgui\imgui_draw.cpp" />
@@ -155,6 +156,7 @@
     <ClCompile Include="src\aplayercameramanager.cpp" />
     <ClCompile Include="src\aplayercontroller.cpp" />
     <ClCompile Include="src\aplayerstate.cpp" />
+    <ClCompile Include="src\aworldsettings.cpp" />
     <ClCompile Include="src\cache.cpp" />
     <ClCompile Include="src\config.cpp" />
     <ClCompile Include="src\driver.cpp" />
@@ -171,6 +173,7 @@
     <ClCompile Include="src\ugameinstance.cpp" />
     <ClCompile Include="src\uhealthstatscomponent.cpp" />
     <ClCompile Include="src\uinventorycomponent.cpp" />
+    <ClCompile Include="src\ulevel.cpp" />
     <ClCompile Include="src\ulocalplayer.cpp" />
     <ClCompile Include="src\uobject.cpp" />
     <ClCompile Include="src\uscenecomponent.cpp" />
@@ -184,9 +187,11 @@
     <ClInclude Include="include\game.hpp" />
     <ClInclude Include="include\names.h" />
     <ClInclude Include="include\objects.h" />
+    <ClInclude Include="include\overlay.hpp" />
     <ClInclude Include="include\polygon.hpp" />
     <ClInclude Include="include\ressources\roboto.h" />
     <ClInclude Include="include\ressources\window_constants.h" />
+    <ClInclude Include="include\skeleton.h" />
     <ClInclude Include="include\ue4.hpp" />
     <ClInclude Include="include\ue4structs.hpp" />
   </ItemGroup>
