--- a/polygonUM.vcxproj
+++ b/polygonUM.vcxproj
@@ -141,7 +141,6 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="include\polygon.cpp" />
     <ClCompile Include="lib\imgui\imgui.cpp" />
     <ClCompile Include="lib\imgui\imgui_demo.cpp" />
     <ClCompile Include="lib\imgui\imgui_draw.cpp" />
@@ -169,6 +168,7 @@
     <ClCompile Include="src\names.cpp" />
     <ClCompile Include="src\objects.cpp" />
     <ClCompile Include="src\overlay.cpp" />
+    <ClCompile Include="src\polygon.cpp" />
     <ClCompile Include="src\structs.cpp" />
     <ClCompile Include="src\ue4.cpp" />
     <ClCompile Include="src\ugameinstance.cpp" />
