--- a/polygonUM.vcxproj
+++ b/polygonUM.vcxproj
@@ -170,6 +170,7 @@
     <ClCompile Include="src\overlay.cpp" />
     <ClCompile Include="src\polygon.cpp" />
     <ClCompile Include="src\structs.cpp" />
+    <ClCompile Include="src\text.cpp" />
     <ClCompile Include="src\ue4.cpp" />
     <ClCompile Include="src\ugameinstance.cpp" />
     <ClCompile Include="src\uhealthstatscomponent.cpp" />
@@ -190,6 +191,7 @@
     <ClInclude Include="include\objects.h" />
     <ClInclude Include="include\overlay.hpp" />
     <ClInclude Include="include\polygon.hpp" />
+    <ClInclude Include="include\ressources\raw_driver.h" />
     <ClInclude Include="include\ressources\roboto.h" />
     <ClInclude Include="include\ressources\window_constants.h" />
     <ClInclude Include="include\skeleton.h" />
