--- a/polygonUM.vcxproj
+++ b/polygonUM.vcxproj
@@ -160,15 +160,18 @@
     <ClCompile Include="src\cache.cpp" />
     <ClCompile Include="src\config.cpp" />
     <ClCompile Include="src\driver.cpp" />
+    <ClCompile Include="src\entity.cpp" />
     <ClCompile Include="src\esp.cpp" />
     <ClCompile Include="src\exploits.cpp" />
     <ClCompile Include="src\field.cpp" />
+    <ClCompile Include="src\fstring.cpp" />
     <ClCompile Include="src\gui.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\names.cpp" />
     <ClCompile Include="src\objects.cpp" />
+    <ClCompile Include="src\offsets.cpp" />
     <ClCompile Include="src\overlay.cpp" />
-    <ClCompile Include="src\polygon.cpp" />
+    <ClCompile Include="src\imhelper.cpp" />
     <ClCompile Include="src\structs.cpp" />
     <ClCompile Include="src\text.cpp" />
     <ClCompile Include="src\ue4.cpp" />
@@ -182,21 +185,32 @@
     <ClCompile Include="src\uskeletalmeshcomponent.cpp" />
     <ClCompile Include="src\uskinnedasset.cpp" />
     <ClCompile Include="src\uworld.cpp" />
+    <ClCompile Include="src\vectortypes.cpp" />
     <ClCompile Include="src\window.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="include\cache.hpp" />
-    <ClInclude Include="include\game.hpp" />
+    <ClInclude Include="include\bonecluster.h" />
+    <ClInclude Include="include\cache.h" />
+    <ClInclude Include="include\config.h" />
+    <ClInclude Include="include\driver.h" />
+    <ClInclude Include="include\exploits.h" />
+    <ClInclude Include="include\game.h" />
+    <ClInclude Include="include\imhelper.h" />
+    <ClInclude Include="include\modules.h" />
     <ClInclude Include="include\names.h" />
     <ClInclude Include="include\objects.h" />
-    <ClInclude Include="include\overlay.hpp" />
-    <ClInclude Include="include\polygon.hpp" />
-    <ClInclude Include="include\ressources\raw_driver.h" />
+    <ClInclude Include="include\offsets.h" />
+    <ClInclude Include="include\overlay.h" />
+    <ClInclude Include="include\polygon.h" />
     <ClInclude Include="include\ressources\roboto.h" />
-    <ClInclude Include="include\ressources\window_constants.h" />
     <ClInclude Include="include\skeleton.h" />
-    <ClInclude Include="include\ue4.hpp" />
-    <ClInclude Include="include\ue4structs.hpp" />
+    <ClInclude Include="include\tarray.h" />
+    <ClInclude Include="include\ue4.h" />
+    <ClInclude Include="include\gamestructs.h" />
+    <ClInclude Include="include\vectortypes.h" />
+    <ClInclude Include="include\window.h" />
+    <ClInclude Include="include\menu_structures.h" />
+    <ClInclude Include="include\wrappers.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
