--- a/polygonUM.vcxproj
+++ b/polygonUM.vcxproj
@@ -172,6 +172,7 @@
     <ClCompile Include="src\offsets.cpp" />
     <ClCompile Include="src\overlay.cpp" />
     <ClCompile Include="src\imhelper.cpp" />
+    <ClCompile Include="src\scanner.cpp" />
     <ClCompile Include="src\structs.cpp" />
     <ClCompile Include="src\text.cpp" />
     <ClCompile Include="src\ue4.cpp" />
@@ -211,6 +212,7 @@
     <ClInclude Include="include\overlay.h" />
     <ClInclude Include="include\polygon.h" />
     <ClInclude Include="include\ressources\roboto.h" />
+    <ClInclude Include="include\scanner.h" />
     <ClInclude Include="include\skeleton.h" />
     <ClInclude Include="include\tarray.h" />
     <ClInclude Include="include\ue4.h" />
